# collimator

./: .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  Taskfile.yml  collimator.sln  docker-compose.yml  jest.config.ts  mise.toml  nginx.Dockerfile  package.json  sonar-project.properties
apps/jupyter/: .gitignore  Makefile  README.md  Taskfile.yml  customStorage.ts  iframe-message-buffering.js  jupyter-lite.json  jupyter-lite.jsonc  otter_test.ipynb  overrides.json  pyproject.toml
apps/jupyter/extensions/: Makefile  Taskfile.yml
apps/jupyter/extensions/notebook-runner/: .copier-answers.yml  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  eslint.config.mjs  install.json  jest.config.js  jest.setup.js  junit.xml  package.json  pyproject.toml  tsconfig.json
apps/jupyter/extensions/notebook-runner/coverage/: lcov.info
apps/jupyter/extensions/notebook-runner/notebook_runner/: __init__.py
apps/jupyter/extensions/notebook-runner/schema/: plugin.json
apps/jupyter/extensions/notebook-runner/scripts/: create-symlink.js  create-version.js
apps/jupyter/extensions/notebook-runner/src/: auto-save.ts  command.ts  constants.ts  format-detector.ts  grading-results.ts  iframe-api.ts  iframe-message-buffer.ts  index.ts  jupyter-context.ts  known-widget.ts  languages.ts  loading-state.ts  mode.ts  notebook-runner-state.ts  notifications.ts  packages.ts  send-message.ts  sentry.ts  task-auto-saver.ts  task-converter.ts  task-format.ts  utils.ts  (+5 more)
apps/jupyter/files/: task.ipynb
(+2140 files in other folders)
