[project]
name = "jupyter-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlite-core (>=0.7.0,<0.8.0)",
    "jupyterlite-pyodide-kernel (>=0.7.0,<0.8.0)",
    "jupyterlab (>=4.5.0,<4.6.0)",
    "jupyterlab-server (>=2.28.0,<3.0.0)",
    "libarchive-c (>=5.3,<6.0)",
    "copier (>=9.10.1,<10.0.0)",
    "jinja2-time (>=0.2.0,<0.3.0)",
    "jupyterlab-language-pack-fr-FR",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
